ACLOCAL_AMFLAGS = -I m4 ${ACLOCAL_FLAGS}
NULL =

SUBDIRS = src po

MAINTAINERCLEANFILES = \
	aclocal.m4		\
	config.guess		\
	config.h.in		\
	config.sub		\
	depcomp			\
	INSTALL			\
	install-sh		\
	ltmain.sh		\
	missing			\
	m4			\
	po/Makefile.in.in	\
	po/Makevars.template	\
	po/Rules-quot		\
	po/boldquot.sed		\
	po/en@boldquot.header	\
	po/en@quot.header	\
	po/insert-header.sin	\
	po/quot.sed		\
	po/remove-potcdate.sin	\
	$(NULL)

-include $(top_srcdir)/git.mk
